--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -25,6 +25,10 @@
       .social-like-text {
         font-size: 1rem;
         color: rgba(0, 0, 0, 0.6);
+
+        @media screen and (max-width: 576px) {
+          display: none !important;
+        }
       }
     }
   }
