--- a/src/components/common/ProfileModal/index.scss
+++ b/src/components/common/ProfileModal/index.scss
@@ -31,5 +31,14 @@
       padding: 0.6rem 0.8rem;
       border: 1px solid rgba(0, 0, 0, 0.6);
     }
+
+    .modal-textarea{
+      border-radius: 5px;
+      box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.6);
+      box-sizing: border-box;
+      padding: 0.6rem 0.8rem;
+      border: 1px solid rgba(0, 0, 0, 0.6);
+      resize: none;
+    }
   }
 }
