--- a/src/components/common/ProfilePage/index.scss
+++ b/src/components/common/ProfilePage/index.scss
@@ -138,7 +138,7 @@
           //   flex-direction: row;
           // }
           .detail-panel {
-            max-width: 100%;
+            max-width: 70%;
             line-height: 1;
 
             .text-heading {
@@ -161,15 +161,36 @@
 
               word-wrap: break-word !important;
               word-break: break-word !important;
+
+              
             }
           }
+          .detail-panel1 {
+            margin-top: 15px;
+            max-width: 100%;
+            line-height: 1;
+            .text-subheading {
+              margin-top: 10px ;
+              font-size: 1rem;
+              font-weight: 400;
+              line-height: 1.25;
+              display: block !important;
+              color: rgba(0, 0, 0, 0.9);
+
+              word-wrap: break-word !important;
+              word-break: break-word !important;
+
+            
+            }
+          }
+
           .detail-right-panel {
-            width: 200px;
+            width: 150px;
             list-style: none;
             position: absolute;
             top: 0;
             right: 0;
-            @media screen and (max-width: 576px) {
+            @media screen and (max-width: 768px) {
               position: relative !important;
               margin-top: 5px;
             }
@@ -182,7 +203,8 @@
               word-wrap: break-word !important;
               word-break: break-word !important;
 
-              @media screen and (max-width: 576px) {
+              @media screen and (max-width: 768px) {
+                margin-top: 10px;
                 font-size: 0.9rem;
                 font-weight: 400;
                 line-height: 1;
